Font changes and overflow fix.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,8 +5,8 @@
 }
 
 @font-face {
-  font-family: Nunito-ExtraLight;
-  src: url("./fonts/NunitoSans/NunitoSans_10pt-ExtraLight.ttf");
+  font-family: Oswald;
+  src: url("./fonts/Oswald/Oswald-Regular.ttf");
 }
 
 @font-face {
@@ -17,11 +17,6 @@
 @font-face {
   font-family: Nunito-Medium;
   src: url("./fonts/NunitoSans/NunitoSans_10pt-Medium.ttf");
-}
-
-@font-face {
-  font-family: Caladea;
-  src: url("./fonts/Caladea/Caladea-Regular.ttf");
 }
 
 h1,
@@ -35,7 +30,7 @@ span {
 }
 
 p {
-  font-family: Nunito-ExtraLight;
+  font-family: Nunito-Medium;
 }
 
 button,
@@ -62,9 +57,9 @@ li {
 }
 
 #root {
-  display: grid;
-  min-height: 100vh;
-  margin: auto;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 a {
